Today's appointments view and pdf added; all MyPets view added; improvements on frontend

--- a/FuzzyPaws2/Views/Appointment/Create.cshtml
+++ b/FuzzyPaws2/Views/Appointment/Create.cshtml
@@ -58,7 +58,7 @@
             </div>*@
 
             <button type="submit" class="btn btn-primary" style="width:150px">
-                Create
+                Create <i class="fa-solid fa-paw"></i>
             </button>
             }
         <a asp-controller="Appointment" asp-action="Index" class="btn btn-secondary">
