--- a/FuzzyPaws2/Views/Home/_DashboardPins.cshtml
+++ b/FuzzyPaws2/Views/Home/_DashboardPins.cshtml
@@ -47,7 +47,7 @@
             <div class="icon">
             <i class="fa fa-user"></i>
             </div>
-            <p class="small-box-footer">Hello there!</p>
+            <p class="small-box-footer">Make it higher!</p>
 @*            <a href="#" class="small-box-footer">More info <i class="bi bi-arrow-right-circle-fill"></i></a>
 *@            </div>
             </div>
