--- a/FuzzyPaws2/Views/MyPet/Create.cshtml
+++ b/FuzzyPaws2/Views/MyPet/Create.cshtml
@@ -10,7 +10,7 @@
     <div class="border p-3 mt-4">
         <div class="row pb-2">
             <h2 class="text-primary">
-                Add new pet <i class="bi bi-box2-heart"></i>
+                Add my pet <i class="fa-solid fa-heart-circle-plus"></i>
             </h2>
             <hr />
         </div>
@@ -55,10 +55,10 @@
              </div>
         </div>
         
-        <button type="submit" class="btn btn-primary" style="width:150px">
+        <button type="submit" class="btn btn-primary">
             Create
         </button>
-        <a asp-controller="MyPet" asp-action="Index" class="btn btn-secondary" style="width:250px">
+        <a asp-controller="MyPet" asp-action="Index" class="btn btn-secondary">
             Cancel
         </a>
     </div>
