--- a/FuzzyPaws2/Views/MyPet/Delete.cshtml
+++ b/FuzzyPaws2/Views/MyPet/Delete.cshtml
@@ -5,7 +5,8 @@
     <div class="border p-3 mt-4">
         <div class="row pb-2">
             <h2 class="text-primary">
-                Are you sure you want to remove your pet? <i class="bi bi-emoji-frown"></i>
+                Are you sure you want to remove your pet?
+                <i class="fa-solid fa-heart-crack"></i>
             </h2>
             <hr />
         </div>
