--- a/FuzzyPaws2/Views/PetType/Index.cshtml
+++ b/FuzzyPaws2/Views/PetType/Index.cshtml
@@ -14,7 +14,7 @@
         {
             <div class="col-6 text-end">
                 <a asp-controller="PetType" asp-action="Create" class="btn btn-primary"> 
-                <i class="bi bi-plus-circle"></i>
+                <i class="fa-solid fa-heart-circle-plus"></i>
                 Add new type of pets
              </a>
         </div>
