--- a/FuzzyPaws2/Views/Role/Index.cshtml
+++ b/FuzzyPaws2/Views/Role/Index.cshtml
@@ -3,11 +3,12 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>List of Roles</h1>
+<br />
+<h1 class="text-primary">List of Roles</h1>
 <br /> <br />
 <table class="table table-striped table-bordered">
     <thead>
-        <tr>
+        <tr class="text text-primary">
             <th>Id</th>
             <th>Name</th>
             <th>List</th>
