--- a/FuzzyPaws2/Views/MyPet/Index.cshtml
+++ b/FuzzyPaws2/Views/MyPet/Index.cshtml
@@ -9,8 +9,12 @@
         </div>
         <div class="col-6 text-end">
             <a asp-controller="MyPet" asp-action="Create" class="btn btn-primary"> 
-                <i class="bi bi-plus-circle"></i>
+                <i class="fa-solid fa-heart-circle-plus"></i>
                 Add your pet
+             </a>
+             <a asp-controller="MyPet" asp-action="AllMyPets" class="btn btn-outline-success"> 
+             <i class="fa-solid fa-paw"></i>
+                Check out everyone's pets!
              </a>
         </div>
     </div>
@@ -40,9 +44,10 @@ else
                   <div class="card-body">
                     <h5 class="card-title text-primary">@pet.Name</h5>
                     <p class="card-text">@pet.Description</p>
-                    <p><a asp-controller="MyPet" asp-action="Details" asp-route-id="@pet.Id">
-                        More about this pet
-                        </a></p>
+                    <a asp-controller="MyPet" asp-action="Details" asp-route-id="@pet.Id"
+                    class="btn btn-outline-primary">
+                        More about this pet <i class="fa-solid fa-paw"></i>
+                    </a>
                   </div>
                 </div>
               </div>
