--- a/FuzzyPaws2/Views/Pet/Create.cshtml
+++ b/FuzzyPaws2/Views/Pet/Create.cshtml
@@ -5,7 +5,7 @@
     <div class="border p-3 mt-4">
         <div class="row pb-2">
             <h2 class="text-primary">
-                Add new pet <i class="bi bi-box2-heart"></i>
+                Add new pet <i class="fa-solid fa-heart-circle-plus"></i>
             </h2>
             <hr />
         </div>
@@ -51,11 +51,11 @@
              </div>
         </div>
 
-        <button type="submit" class="btn btn-primary" style="width:150px">
+        <button type="submit" class="btn btn-primary">
             Create
         </button>
-        <a asp-controller="Pet" asp-action="Index" class="btn btn-secondary" style="width:250px">
-            Go back to the list of pets
+        <a asp-controller="Pet" asp-action="Index" class="btn btn-secondary">
+            Cancel
         </a>
     </div>
 </form>
