--- a/FuzzyPaws2/Views/Pet/Delete.cshtml
+++ b/FuzzyPaws2/Views/Pet/Delete.cshtml
@@ -5,7 +5,8 @@
     <div class="border p-3 mt-4">
         <div class="row pb-2">
             <h2 class="text-primary">
-                Are you sure you want to remove this pet from the list? <i class="bi bi-emoji-frown"></i>
+                Are you sure you want to remove this pet from the list? 
+                <i class="fa-solid fa-heart-crack"></i>
             </h2>
             <hr />
         </div>
@@ -36,10 +37,10 @@
 @*        <dd class="col-sm-10">
             <img src="@FileLocation.RetriveFileFromFolder@Model.ExistingImage" class="img-thumbnail" height="100" width="100" asp-append-version="true" />
         </dd>*@
-        <button type="submit" class="btn btn-danger" style="width:150px">
+        <button type="submit" class="btn btn-danger">
             Delete
         </button>
-        <a asp-controller="Pet" asp-action="Details" asp-route-id="@Model.Id" class="btn btn-secondary" style="width:250px">
+        <a asp-controller="Pet" asp-action="Details" asp-route-id="@Model.Id" class="btn btn-secondary">
             Cancel
         </a>
     </div>
