--- a/FuzzyPaws2/Views/Pet/Edit.cshtml
+++ b/FuzzyPaws2/Views/Pet/Edit.cshtml
@@ -51,11 +51,11 @@
         </div>
         
         <br />
-        <button type="submit" class="btn btn-primary" style="width:150px">
+        <button type="submit" class="btn btn-primary">
             Update
         </button>
-        <a asp-controller="Pet" asp-action="Index" class="btn btn-secondary" style="width:250px">
-            Go back to the list of pets
+        <a asp-controller="Pet" asp-action="Details" asp-route-id="@Model.Id" class="btn btn-secondary">
+            Cancel
         </a>
     </div>
 </form>
