--- a/FuzzyPaws2/Views/PetBreed/Create.cshtml
+++ b/FuzzyPaws2/Views/PetBreed/Create.cshtml
@@ -32,8 +32,8 @@
         <button type="submit" class="btn btn-primary" style="width:150px">
             Create
         </button>
-        <a asp-controller="PetBreed" asp-action="Index" class="btn btn-secondary" style="width:250px">
-            Go back to the list of breeds...
+        <a asp-controller="PetBreed" asp-action="Index" class="btn btn-secondary">
+            Cancel
         </a>
     </div>
 </form>
