--- a/FuzzyPaws2/Views/PetBreed/Index.cshtml
+++ b/FuzzyPaws2/Views/PetBreed/Index.cshtml
@@ -15,7 +15,7 @@
         {
             <div class="col-6 text-end">
                 <a asp-controller="PetBreed" asp-action="Create" class="btn btn-primary"> 
-                    <i class="bi bi-plus-circle"></i>
+                <i class="fa-solid fa-heart-circle-plus"></i>
                     Add new pet breed
                 </a>
             </div>
