--- a/FuzzyPaws2/Views/PetType/Create.cshtml
+++ b/FuzzyPaws2/Views/PetType/Create.cshtml
@@ -29,11 +29,11 @@
                 <span asp-validation-for="Picture" class="text-danger"></span>
              </div>
         </div>
-        <button type="submit" class="btn btn-primary" style="width:150px">
+        <button type="submit" class="btn btn-primary">
             Create
         </button>
-        <a asp-controller="PetType" asp-action="Index" class="btn btn-secondary" style="width:250px">
-            Go back to the list of types...
+        <a asp-controller="PetType" asp-action="Index" class="btn btn-secondary">
+            Cancel
         </a>
     </div>
 </form>
