--- a/FuzzyPaws2/Views/PetType/Delete.cshtml
+++ b/FuzzyPaws2/Views/PetType/Delete.cshtml
@@ -5,7 +5,8 @@
     <div class="border p-3 mt-4">
         <div class="row pb-2">
             <h2 class="text-primary">
-                Are you sure you want to remove this type of pet from the list? <i class="bi bi-emoji-frown"></i>
+                Are you sure you want to remove this type of pet from the list?
+                <i class="fa-solid fa-heart-crack"></i>
             </h2>
             <hr />
         </div>
@@ -19,11 +20,11 @@
             <input asp-for="Description" disabled class="form-control"/>  
         </div>
         
-        <button type="submit" class="btn btn-danger" style="width:150px">
+        <button type="submit" class="btn btn-danger">
             Delete
         </button>
-        <a asp-controller="PetType" asp-action="Index" class="btn btn-secondary" style="width:250px">
-            Go back to the list of types...
+        <a asp-controller="PetType" asp-action="Details" asp-route-id="@Model.Id" class="btn btn-secondary">
+            Cancel
         </a>
     </div>
 </form>
