--- a/FuzzyPaws2/Views/Shared/_Layout.cshtml
+++ b/FuzzyPaws2/Views/Shared/_Layout.cshtml
@@ -23,7 +23,9 @@
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon" style="color:white">
+                        <i class="bi bi-caret-down-square"></i>
+                        </span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
@@ -82,20 +84,17 @@
                                    asp-action="Notification">
                                     <i class="fa-solid fa-bell"
                                        style="color:yellow">
-
-                                        @*@if(Model.AllAppointments.Where(x => x.status == Status.Waiting)
-                                                                     .Count()
-                                                                     .Equals(0))
-                                            {
-                                            }
-                                            @Model.AllAppointments.Where(x => x.status == Status.Waiting).Count()*@
                                     </i>
                                 </a>
                             </li>
-                        }
-                        <li class="nav-item">
+                            <li class="nav-item">
+                                <partial name="_LoginPartial" />
+                            </li>
+                        }else{
+                        <li class="nav-item ms-auto">
                             <partial name="_LoginPartial" />
                         </li>
+                        }
 
                     </ul>
                 </div>
@@ -120,13 +119,3 @@
     @RenderSection("Scripts", required: false)
 </body>
 </html>
-<script type="text/javascript">
-function myFunction () {
-    if (document.getElementById('pls').innerHTML == "There is no new waiting appointments.") {
-        console.log('No waiting appointments.');
-    } else {
-        console.log('You have a waiting appointment!');
-    }
-
-var interval = setInterval(function () { myFunction(); }, 10000);
-</script>
